--- a/recipes.html
+++ b/recipes.html
@@ -27,48 +27,49 @@
                 <button type="submit"></button>
             </form>
           </div>
-
-          <div id="filter_id" class="filter">
-            <div><strong>Filter Options</strong></div>
-            <div onclick="expCost()" class="filter_item"><span class="key_down">Cost of Preparation</span><span><i id="cost_prep" class="material-icons">keyboard_arrow_down
-</i></span></div>
-            <form class="cost_check">
-                <input type="checkbox" name="cost1" value="cost1"> $
-                <input type="checkbox" name="cost2" value="cost2"> $$
-                <input type="checkbox" name="cost3" value="cost3"> $$$
+       <div class="filter">
+            <div onclick='filterFocus()' class='filter_head' ><strong>Filter</strong></div>
+            <div id="filter_item1" class="filter_item">
+            <form class='cost_check'>
+                <label class='filter_lab' for='cost'>Cost:</label>
+                <input id='one_dollar' type="checkbox" name="cost1" value="cost1"> $
+                <input id='two_dollar' type="checkbox" name="cost2" value="cost2"> $$
+                <input id='three_dollar' type="checkbox" name="cost3" value="cost3"> $$$
             </form>
+            </div>
 
-            <div onclick="expIng()" class="filter_item"><span class="key_down">Main Ingredient</span><span><i id="main_ing" class="material-icons">keyboard_arrow_down
-</i></span></div>
-                <form class="ing_check">
-                <input type="checkbox" name="ing" value="Tofu">Tofu
-                <input type="checkbox" name="ing" value="Tempeh">Tempeh
-                <input type="checkbox" name="ing" value="Eggs">Eggs
+            <div id="filter_item2" class="filter_item">
+                <form class='cost_check'>
+                <label class='filter_lab' for='ingredient'>Ingredient: </label>
+                <input id='tofu_id' type="checkbox" name="ing" value="Tofu">Tofu
+                <input id='tempeh_id' type="checkbox" name="ing" value="Tempeh">Tempeh
+                <input id='eggs_id' type="checkbox" name="ing" value="Eggs">Eggs
             </form>
+            </div>
 
-            <div></div>
+           <div id="filter_item3" class='filter_item'>
+            <button onclick='applyClick()' class='apply_filter_item' >Apply</button>
+           </div> 
           </div>
-          <div class="search-result">
+
+
 
             <a href="recipe1.html" style='text-decoration: none;'>
-            <div class="search-result1">
+            <div id='rec_1' class="search-result1">
                 <img class = "img" src="images/vegan-lemon-bars-1.jpg" alt="img1">
                 <p class = "text3">Vegan Lemon Bars</p>
             </div>
             </a>
-
-            <br>
-            <div class="search-result2">
+            <div id='rec_2' class="search-result2">
                 <img class = "img" src="images/recipe4.jpg" alt="img1">
                 <p class = "text3">Tomato curry</p>
             </div>
-            <br>
-            <div class="search-result3">
+
+            <div id='rec_3' class="search-result2">
                 <img class = "img" src="images/recipe2.jpg" alt="img1">
                 <p class = "text3">Veggie Noodles</p>
             </div>
-            <br>
-            <div class="search-result4">
+            <div id='rec_4' class="search-result2">
                 <img class = "img" src="images/recipe3.jpg" alt="img1">
                 <p class = "text3">Turkish Eggplant Casserole</p>
             </div>
