--- a/front2.html
+++ b/front2.html
@@ -34,7 +34,7 @@
           <div class="double-bounce1"></div>
           <div class="double-bounce2"></div>
           <div class="double-bounce3"></div>
-					<i class="material-icons md-4">fastfood</i>
+					<i class="material-icons md-4">shopping_cart</i>
           </div>
         </a>
 			  </div>
