--- a/person-profile.html
+++ b/person-profile.html
@@ -31,19 +31,17 @@
           <input id='pro-sub' type='submit' class = "form-style2" value='Save'></input>
           </form>
           <p class = "text2-4"> Favorite restaurant </p>
+            <a href="restaurant1.html">
             <div class="search-result1-user-profile">
-                <a href="restaurant1.html">
                 <img class = "img" src="images/restaurant1.jpg" alt="img1">
-                </a>
                 <p class = "text3">The Glass Onion</p>
-            </div>
+            </div></a>
             <p class = "text2-4"> Favorite recipe </p>
+            <a href="recipe1.html">
             <div class="search-result1-user-profile">
-                <a href="recipe1.html">
                 <img class = "img" src="images/vegan-lemon-bars-1.jpg" alt="img1">
-                </a>
                 <p class = "text3">Vegan Lemon Bars</p>
-            </div>
+            </div></a>
             <br>
 
         </div>
