--- a/recipe1.html
+++ b/recipe1.html
@@ -41,7 +41,7 @@
           <div class="nutrition_base"><span>Calcium</span> <span class="nutrition_right">0.2%</span></div>
           <div class="nutrition_base"><span>Iron</span> <span class="nutrition_right">3.6%</span></div>
           </div>
-        <a style="text-decoration: none;" href="#">
+        <a style="text-decoration: none;" href="social.html">
         <div class="rating_bar share">
         Share
         </div>
