--- a/menu1.html
+++ b/menu1.html
@@ -9,7 +9,7 @@
         <div id="screen">
 
           <div class="head-bar1" overflow: auto;>
-          <a href="restaurant1.html"><i class="material-icons md-3">arrow_back</i></a>
+          <a href="#" onclick="javascript:history.go(-1);"><i class="material-icons md-3">arrow_back</i></a>
             <h3 class="head_recipes">Menu</h3>
             <div class='account'>
             <a href="person-profile.html"><i class="material-icons">account_circle</i></a>
