--- a/recipe1.html
+++ b/recipe1.html
@@ -9,7 +9,7 @@
         <div id="screen" style="overflow: auto;">
           <div class="head-bar1">
               <div class='back_button'>
-              <a href="recipes.html"><i class="material-icons md-3">arrow_back</i></a>
+              <a href="#" onclick="javascript:history.back(-1);"><i class="material-icons md-3">arrow_back</i></a>
               </div>
                <h3 class='head_recipes'>Vegan Lemon Bars</h3>
               <div class='account'>
