--- a/social.html
+++ b/social.html
@@ -11,7 +11,7 @@
         <div id="screen" style="overflow: auto;">
 
           <div class="head-bar1" overflow: auto;>
-          <a href="front.html"><i class="material-icons md-3">arrow_back</i></a>
+          <a href="#" onclick="javascript:history.go(-1);"><i class="material-icons md-3">arrow_back</i></a>
             <h3 class="head_recipes"> Social </h3>
           <div class='account'>
             <a href="person-profile.html"><i class="material-icons">account_circle</i></a>
@@ -29,7 +29,7 @@
             </div>
             </a>
 
-            <a href="restaurant1-social.html" style='text-decoration: none;'>
+            <a href="restaurant1.html" style='text-decoration: none;'>
             <div class="social1">
                 <img class = "img" src="images/restaurant1.jpg" alt="img1">
                 <!--<p class = "text-social1">The Glass Onion</p>-->
