--- a/login.html
+++ b/login.html
@@ -11,7 +11,7 @@
         <div id="screen" style="overflow: auto;">
 
           <div class="head-bar1" overflow: auto;>
-          <a href="front.html"><i class="material-icons md-3">arrow_back</i></a>
+          <a href="#" onclick="javascript:history.go(-1);"><i class="material-icons md-3">arrow_back</i></a>
             <h3 class="head_recipes"> Login </h3>
           </div>
 
