--- a/make_recipe.html
+++ b/make_recipe.html
@@ -9,7 +9,7 @@
         <div id="screen" style="overflow: auto;">
           <div class="head-bar1">
               <div class='back_button'>
-              <a href="recipe1.html"><i class="material-icons md-3">arrow_back</i></a>
+              <a href="#" onclick="javascript:history.go(-1);"><i class="material-icons md-3">arrow_back</i></a>
               </div>
               <div class="head_recipes"><strong>Vegan Lemon Bars</strong></div>
           </div>
