--- a/newpost.html
+++ b/newpost.html
@@ -11,7 +11,7 @@
         <div id="screen" style="overflow: auto;">
 
           <div class="head-bar1" overflow: auto;>
-          <a href="social.html"><i class="material-icons md-3">arrow_back</i></a>
+          <a href="#" onclick="javascript:history.go(-1);"><i class="material-icons md-3">arrow_back</i></a>
             <h3 class="head_recipes"> New post </h3>
           <div class='account'>
             <a href="person-profile.html"><i class="material-icons">account_circle</i></a>
