--- a/recipes.html
+++ b/recipes.html
@@ -11,7 +11,7 @@
         <div id="screen" style="overflow: auto;">
 
           <div class="head-bar1">
-          <a href="front2.html"><i class="material-icons md-3">arrow_back</i></a>
+          <a href="#" onclick="javascript:history.go(-1);"><i class="material-icons md-3">arrow_back</i></a>
             <h3 class="head_recipes"> Recipes </h3>
             <div class='account'>
                 <a href="person-profile.html"><i class="material-icons">account_circle</i></a>
