--- a/restaurant1.html
+++ b/restaurant1.html
@@ -9,7 +9,7 @@
         <div id="screen" style="overflow: auto;">
           <div class="head-bar1">
               <div class='back_button'>
-              <a href="restaurant.html"><i class="material-icons md-3">arrow_back</i></a>
+              <a href="#" onclick="javascript:history.go(-1);"><i class="material-icons md-3">arrow_back</i></a>
               </div>
             <div class='account'>
                 <a href="person-profile.html"><i class="material-icons">account_circle</i></a>
