--- a/social.html
+++ b/social.html
@@ -5,7 +5,7 @@
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-      <script src="ipod.js"></script>
+      <script src="post.js"></script>
     </head>
     <body>
         <div id="screen" style="overflow: auto;">
@@ -28,6 +28,14 @@
                 <i class="material-icons md-post">add_comment</i>
             </div>
             </a>
+    
+            <div id='user_post' class="social1">
+                <img class = "img" src="images/restaurant1.jpg" alt="img1">
+                <!--<p class = "text-social1">The Glass Onion</p>-->
+
+                <div id='my_post' class="review1">
+                  </div>
+            </div>
 
             <a href="restaurant1-social.html" style='text-decoration: none;'>
             <div class="social1">
@@ -42,7 +50,7 @@
             </div>
             </a>
             <br>
-            <div class="social2">
+            <div class="social1">
                 <img class = "img" src="images/recipe2.jpg" alt="img1">
                 <div class="review1">
                  <div class="review_auth1"><strong>Ronald Reagan's review</strong></div>
@@ -51,7 +59,7 @@
                 </div>
             </div>
             <br>
-            <div class="social3">
+            <div class="social1">
                 <img class = "img" src="images/recipe6.jpg" alt="img1">
                 <div class="review1">
                  <div class="review_auth1"><strong>Ronald Reagan's review</strong></div>
@@ -60,7 +68,7 @@
                 </div>
             </div>
             <br>
-            <div class="social4">
+            <div class="social1">
                 <img class = "img" src="images/restaurant4.jpg" alt="img1">
                 <div class="review1">
                   <div class="review_auth1"><strong>Ronald Reagan's review</strong></div>
